tests/ui/associated-type-bounds/conflicting-bounds-different-generics-simple.stderr
error[E0038]: the trait `Sub` is not dyn compatible
  --> $DIR/conflicting-bounds-different-generics-simple.rs:14:25
   |
LL | fn foo<T, U>(x: Option<&dyn Sub<T, U>>) {
   |                         ^^^^^^^^^^^^^ `Sub` is not dyn compatible
   |
note: for a trait to be dyn compatible it needs to allow building a vtable
      for more information, visit <https://doc.rust-lang.org/reference/items/traits.html#dyn-compatibility>
  --> $DIR/conflicting-bounds-different-generics-simple.rs:7:10
   |
LL |     type Assoc;
   |          ^^^^^ ...because it has conflicting associated item bounds for Assoc in supertraits
...
LL | trait Sub<T, U>: Super<T, Assoc = u32> + Super<U, Assoc = u64> {
   |       --- this trait is not dyn compatible...

error[E0038]: the trait `Sub` is not dyn compatible
  --> $DIR/conflicting-bounds-different-generics-simple.rs:17:9
   |
LL |         x.unwrap().method();
   |         ^^^^^^^^^^ `Sub` is not dyn compatible
   |
note: for a trait to be dyn compatible it needs to allow building a vtable
      for more information, visit <https://doc.rust-lang.org/reference/items/traits.html#dyn-compatibility>
  --> $DIR/conflicting-bounds-different-generics-simple.rs:7:10
   |
LL |     type Assoc;
   |          ^^^^^ ...because it has conflicting associated item bounds for Assoc in supertraits
...
LL | trait Sub<T, U>: Super<T, Assoc = u32> + Super<U, Assoc = u64> {
   |       --- this trait is not dyn compatible...

error[E0038]: the trait `Sub` is not dyn compatible
  --> $DIR/conflicting-bounds-different-generics-simple.rs:26:21
   |
LL |     foo::<i16, i16>(None);
   |                     ^^^^ `Sub` is not dyn compatible
   |
note: for a trait to be dyn compatible it needs to allow building a vtable
      for more information, visit <https://doc.rust-lang.org/reference/items/traits.html#dyn-compatibility>
  --> $DIR/conflicting-bounds-different-generics-simple.rs:7:10
   |
LL |     type Assoc;
   |          ^^^^^ ...because it has conflicting associated item bounds for Assoc in supertraits
...
LL | trait Sub<T, U>: Super<T, Assoc = u32> + Super<U, Assoc = u64> {
   |       --- this trait is not dyn compatible...

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0038`.
